main2.css
body {
	margin: 0px;
    padding: 0px;
}
h3 {
	font-family: Oswald;
	font-size: 61px;
	margin-bottom: 10px;
	color: #083452;
	line-height: 70px;
}
h1 {
	margin-top: 160px;
	font-family: Oswald;
	font-size: 85px;
	text-align: center;
	color: white;
	text-shadow: 2px 2px #083452;
}
h2 {
	font-family: Asap;
	font-size: 15px;
	text-align: center;
	color: black;
	margin-top: -75px;
}
h4 {
	font-family: Oswald;
	font-size: 65px;
	margin-bottom: 30px;
	margin-top: -120px;
	text-align: center;
	color: #083452;
}
.header {
	background-image: url("images/waves.jpg");
	margin: 0px auto;
	font-size: 18px;
	height:524px;

}
.logo {
	float: left;
	padding-left: 150px;
	font-size: 18px;
	font-family: Asap;
	padding-top: 20px;
	border-color: red;
	border: 5px;
}
.aboutsearch {
	display: inline-block;
	float: right;
	padding-right: 130px;
	font-size: 18px;
	font-family: Asap;
	padding-top: 20px;
	border: 5px;
	border-color: red;
}
.main-container {
	width: 1380px;
	margin: 0 auto;
}
.leftbar {
	display: inline-block;
	padding-left: 150px;
	font-family: Asap;
	width: 590px;
	padding-bottom: 150px;
}
.paragraph1{
	font-family: Asap;
	font-size: 16px;
	line-height: 26px;
	margin-bottom: -4px;
}
.userpicsmall{
	font-size: 15px;
	display: inline-block;
	height: 50px;
	margin-top: -150px;
	margin-bottom: 1px;
}
.userinfo{
	font-size: 15px;
	margin: 0px auto;
	font-family: Asap;
	display: inline-block;
	height: 50px;
}
.sidebarlink{
	padding-bottom: 40px;
	font-family: Asap;
	font-size: 14px;
	color: #cbd4db;
}
.sidebarname {
	font-size: 18px;
	padding-bottom: 2px;
}
.sidebarsection {
	color: #819FF7;
	font-family: Oswald;
	font-size: 18px;
	text-align: left;
	padding-bottom: 4px;
}
.sidebarinfo {
	color: #A4A4A4;
	font-family: Asap;
	font-size: 15px;
	line-height: 24px;
	text-align: left;
	width: 278px;
}
.rightbar {
	display: inline-block;
	text-align: center;
	border: 1px;
	font-family: Asap;
	padding-right: 150px;
	padding-left: 20px;
	padding-top: 75px;
	display: inline-block;
}
.aboutthisad {
	font-size: 14px;
	color: #A4A4A4;
	text-align: right;
	margin-bottom: 45px;
}
.paddle {
	margin-bottom: 8px;
	width: 300px;
	height: 300px;	
}
.woah {
	font-size: 28px;
	border-left-style: solid;
	border-color: #A4A4A4;
	height: 35px;
	color: #106db3;
	padding-top: 10px;
	padding-bottom: 10px;
	margin-top: 30px;
	margin-bottom: 30px;
}
.footer {
	margin: 0px auto;
}

.footer-container {
	margin: 0px auto;
	height: 450px;
}
.footer1{
	float: right;
	background-image: url("images/bar.jpg");
	background-size:cover;
	width: 25%;
	height: 330px;
}
.footer1text {
	width: 325px;
	font-family: Oswald;
	font-size: 30px;
	margin-top: 275px;
	padding-left: 15px;
	text-align: left;
	color: #083452;
}
.footer2 {
	float: right;
	background-image: url("images/zac.jpg");
	background-size:cover;
	width: 25%;
	height: 330px;
}
.footer2text {
	width: 325px;
	font-family: Oswald;
	font-size: 30px;
	margin-top: 230px;
	padding-left: 15px;
	text-align: left;
	color: #083452;
}
.footer3 {
	float: right;
	background-image: url("images/beer.jpg");
	background-size:cover;
	width: 25%;
	height: 330px;
}
.footer3text {
	width: 325px;
	font-family: Oswald;
	font-size: 30px;
	margin-top: 275px;
	padding-left: 15px;
	text-align: left;
	color: white;
}
.footer4 {
	float: right;
	background-image: url("images/surfer.jpg");
	background-size:cover;
	width: 25%;
	height: 330px;
}
.footer4text {
	width: 325px;
	font-family: Oswald;
	font-size: 30px;
	margin-top: 275px;
	padding-left: 15px;
	text-align: left;
	color: #083452;	
}
.bottomfooter {
	background-color: #083452;
	margin: 0px auto;
	font-size: 13px;
	height:100px;
}
.bottomleft {
	float: left;
	padding-left: 150px;
	font-size: 14px;
	font-family: Asap;
	padding-top: 40px;
	color: #a3b3bf;
}
.bottomright {
	float: right;
	padding-right: 150px;
	font-size: 14px;
	font-family: Asap;
	padding-top: 40px;
}

